# platform

./: .gitignore  Makefile.am  configure.ac
cglm/include/: Makefile.am
cglm/include/cglm/: Makefile.am
cglm/include/cglm/call/: Makefile.am
cglm/include/cglm/simd/: Makefile.am
cglm/include/cglm/simd/avx/: Makefile.am
cglm/include/cglm/simd/neon/: Makefile.am
cglm/include/cglm/simd/sse2/: Makefile.am
data/: Makefile.am
data/fonts/: Makefile.am
data/images/: Makefile.am
glad/include/glad/: glad.h
glad/src/: Makefile.am  glad.c
src/: Makefile.am  main.c
